--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap-sass": "^3.0.0",
     "gulp": "^3.9.1",
     "laravel-elixir": "^5.0.0",
+    "laravel-elixir-stylus": "^2.0.3",
     "stylus": "^0.54.5"
   }
 }
